--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="kelompok-grid">
                 <a href="https://shazha08.github.io/Portofolio/" class="kelompok-card">
                     <div class="card-img">
-                        <img src="img/mylogo.png" alt="Anggota 1" />
+                        <img src="IMG_4774.JPG" alt="Anggota 1" />
                     </div>
                     <div class="card-info">
                         <h3>Affin Zhafira</h3>
@@ -60,9 +60,9 @@
                     </div>
                 </a>
 
-                <a href="porto-anggota2.html" class="kelompok-card">
+                <a href="https://taaa05.github.io/portofolio005/" class="kelompok-card">
                     <div class="card-img">
-                        <img src="img/mylogo.png" alt="Anggota 2" />
+                        <img src="IMG_4758.JPG" alt="Anggota 2" />
                     </div>
                     <div class="card-info">
                         <h3>Anugrah RAmadhan Tita Prawira</h3>
@@ -70,9 +70,9 @@
                     </div>
                 </a>
 
-                <a href="porto-anggota3.html" class="kelompok-card">
+                <a href="https://bagazzzfrrel2-cpu.github.io/farrel1223/" class="kelompok-card">
                     <div class="card-img">
-                        <img src="img/mylogo.png" alt="Anggota 3" />
+                        <img src="IMG_4746 (1).JPG" alt="Anggota 3" />
                     </div>
                     <div class="card-info">
                         <h3>Farrel Bagas Aryaguna</h3>
@@ -80,9 +80,9 @@
                     </div>
                 </a>
 
-                <a href="porto-anggota4.html" class="kelompok-card">
+                <a href="https://fayyee09.github.io/Portofolio-01/" class="kelompok-card">
                     <div class="card-img">
-                        <img src="img/mylogo.png" alt="Anggota 2" />
+                        <img src="IMG_4783.JPG" alt="Anggota 2" />
                     </div>
                     <div class="card-info">
                         <h3>Fayyad Afieq Affandi</h3>
@@ -90,9 +90,9 @@
                     </div>
                 </a>
 
-                <a href="porto-anggota5.html" class="kelompok-card">
+                <a href="https://jelita9.github.io/Portofolio/" class="kelompok-card">
                     <div class="card-img">
-                        <img src="img/mylogo.png" alt="Anggota 2" />
+                        <img src="IMG_4780.JPG" alt="Anggota 2" />
                     </div>
                     <div class="card-info">
                         <h3>Jelita MAdinah Azhar</h3>
@@ -111,7 +111,7 @@
             <div class="content-wrapper">
                 <div class="pdf-container">
                     <iframe
-                        src="https://drive.google.com/file/d/1EBCURSKO9i1r_AGcxn10F-Yr0UbAhX10/preview"
+                        src="Jejak Pertempuran 10 November 1945 di Surabaya (uprak affin ).pdf"
                         width="100%"
                         height="100%"
                         allow="autoplay">
@@ -140,7 +140,7 @@
             <div class="video-wrapper">
                 <div class="video-container">
                     <iframe
-                        src="https://drive.google.com/file/d/ID_DRIVE/preview"
+                        src="WhatsApp Video 2026-02-10 at 15.15.20.mp4"
                         width="100%"
                         height="100%"
                         allow="autoplay">
