--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <div class="content-wrapper">
                 <div class="pdf-container">
                     <iframe
-                        src="Jejak Pertempuran 10 November 1945 di Surabaya (uprak affin ).pdf"
-                        width="100%"
+                        src="https://drive.google.com/file/d/19KG0s07ykkhqv1Vi__No_ziGd1TP6r_w/preview" 
+                        width="100%" 
                         height="100%"
                         allow="autoplay">
                     </iframe>
@@ -121,7 +121,7 @@
                 <div class="content-desc">
                     <p>Silakan baca dokumen di atas untuk informasi lebih mendalam.</p>
                     <a
-                        href="https://drive.google.com/file/d/ID_DRIVE/view?usp=sharing"
+                        href="https://drive.google.com/file/d/19KG0s07ykkhqv1Vi__No_ziGd1TP6r_w/view?usp=sharing"
                         target="_blank"
                         class="btn-cek"
                         style="margin-top: 15px; padding: 8px 20px; font-size: 0.9rem">
@@ -140,7 +140,7 @@
             <div class="video-wrapper">
                 <div class="video-container">
                     <iframe
-                        src="WhatsApp Video 2026-02-10 at 15.15.20.mp4"
+                        src="https://drive.google.com/file/d/1CeoYDShHpDL8ERtqY83JtWMY_fyz2x7N/preview"
                         width="100%"
                         height="100%"
                         allow="autoplay">
